<resources>
    <string name="app_name">Health Record</string>
    <string name="add_person">Add Person</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="action_settings">Settings</string>
    <string name="gender">Gender</string>
    <string name="pick_date">Calendar</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_type">Blood Type</string>
    <string name="edit">Edit</string>
    <string name="remove">Del.</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="manage_ailments">Ailments</string>
    <string name="manage_treatments">Treatments</string>
    <string name="manage_appointments">Appointments</string>
    <string name="manage_measures">Measures</string>
    <string name="personal_analysis">Statistics</string>
    <string name="personal_data">Personal Data</string>
    <string name="doctors">Therapists</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_question">Do you really want to remove</string>
    <string name="removing">Removing</string>
    <string name="ssn">Social Security Number</string>
    <string name="speciality">Speciality</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="add_therapist">Add Therapist</string>
    <string name="my_therapists">Therapists</string>
    <string name="calendar">Calendar</string>
    <string name="no_other_therapist">No other therapist</string>
    <string name="update_therapist">Update Therapist</string>
    <string-array name="branches">
        <item>Generalist</item>
        <item>Pediatrician</item>
        <item>Physiotherapist</item>
        <item>Allergist</item>
        <item>Immunologist</item>
        <item>Anesthesiologist</item>
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Gastroenterologist</item>
        <item>Hematologist</item>
        <item>Oncologist</item>
        <item>Internal Medicine Physician</item>
        <item>Nephrologist</item>
        <item>Neurologist</item>
        <item>Neurosurgeon</item>
        <item>Obstetrician</item>
        <item>Gynecologist</item>
        <item>Nurse-Midwifery</item>
        <item>Occupational Medicine Physician</item>
        <item>Ophthalmologist</item>
        <item>Oral and Maxillofacial Surgeon</item>
        <item>Orthopaedic Surgeon</item>
        <item>Otolaryngologist</item>
        <item>Pathologist</item>
        <item>Plastic Surgeon</item>
        <item>Podiatrist</item>
        <item>Psychiatrist</item>
        <item>Pulmonary Medicine Physician</item>
        <item>Radiation Onconlogist</item>
        <item>Diagnostic Radiologist</item>
        <item>Rheumatologist</item>
        <item>Urologist</item>
    </string-array>
    <string-array name="illnesses">
        <item>Cholesterol</item>
        <item>Hypertension</item>
        <item>Migraine</item>
        <item>Depression</item>
        <item>Asthma</item>
        <item>Bronchiolitis</item>
        <item>Bronchitis</item>
        <item>Acne</item>
        <item>Eczema</item>
        <item>Herpes</item>
        <item>Psoriasis</item>
        <item>Ulcer</item>
        <item>Osteoarthritis</item>
        <item>LBP</item>
        <item>Osteoporosis</item>
        <item>Rheumatism</item>
        <item>Sciatica</item>
        <item>Cataract</item>
        <item>Diabetes</item>
        <item>Meningitis</item>
        <item>Phlebitis</item>
        <item>Alcoholism</item>
        <item>Smoking</item>
        <item>Anorexia</item>
        <item>Bulimia</item>
        <item>Nasopharyngitis</item>
        <item>Allergy</item>
        <item>Flu</item>
        <item>Angina</item>
        <item>Cold</item>
        <item>Colic</item>
        <item>Gastroenteritis</item>
        <item>Chicken pox</item>
        <item>Diarrhea</item>
        <item>Measles</item>
        <item>Hemorrhoids</item>
        <item>Constipation</item>
        <item>Jaundice</item>
        <item>Rubella</item>
    </string-array>
    <string name="drugs">Drugs</string>
    <string-array name="measures">
        <item> </item>
        <item>Weight</item>
        <item>Size</item>
        <item>Temperature</item>
        <item>Cranial Perimeter</item>
        <item>Glucose</item>
        <item>Heart</item>
    </string-array>
    <string name="size">Size(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="temperature">Temperature(°C)</string>
    <string name="glucose">Glucose(g/l)</string>
    <string name="heart">Heart(p/m)</string>
    <string name="cp">Cranial Perimeter(cm)</string>
    <string name="diastolic">Diastolic(cmHg)</string>
    <string name="systolic">Systolic(cmHg)</string>
    <string name="heartbeat">Heartbeat(p/m)</string>
    <string name="add_rv">Add Appointment</string>
    <string name="add_ailment">Add Ailment</string>
    <string name="add_treatment">Add Treatment</string>
    <string name="hour">Hour: </string>
    <string name="remove_appt_question">Are you sure you want to remove this appointment ?</string>
    <string name="remove_measure_question">Are you sure you want to remove this measure ?</string>
    <string name="remove_observation_question">Are you sure you want to remove this observation ?</string>
    <string name="illness">Illness</string>
    <string name="chronic">Chronic</string>
    <string name="prescribedBy">Treated by: </string>
    <string name="permanent">Permanent</string>
    <string name="start">Start: </string>
    <string name="end">End: </string>
    <string name="times">times / </string>
    <string name="frequency">Frequency</string>
    <string-array name="freqChoice">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>Life</item>
    </string-array>
    <string name="date">Date: </string>
    <string name="with">With: </string>
    <string name="type">Type: </string>
    <string name="display">Display</string>
    <string name="db_warning">Data integrity violation</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="notValidData">Incomplete or invalid data</string>
    <string name="update_saved">Update saved</string>
    <string name="cell_phone_number">Cell Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="comment">Comment</string>
    <string name="duration">Duration: </string>
    <string name="number_of_days">day(s)</string>
    <string name="med_req">Provide at least one medic!</string>
    <string name="self">Self</string>
    <string name="duplicate_medic">Duplicated Medic</string>
    <string name="number_of_measures">Number of measures</string>
    <string name="number_of_appt">Number of appointments</string>
    <string name="number_of_ailments">Number of ailments</string>
    <string name="number_of_medics">Number of medics</string>
    <string name="number_of_observations">Number of observations</string>
    <string name="no_change">No change to save</string>
    <string name="data_saved">Data saved</string>
    <string name="preventive_treatment">Preventive Treatment</string>
    <string name="no_therapist_found">No therapist found</string>
    <string name="add_existing_therapist">Add existing therapist</string>
    <string name="add_new_therapist">Add new therapist</string>
    <string name="add_drug">Add drug </string>
    <string name="stop">Stop</string>
    <string name="current_size">Current size (cm): </string>
    <string name="current_weight">Current weight (kg): </string>
    <string name="doctor">Doctor</string>
    <string name="overlapping_ailment">Illness already declared for this period</string>
    <string name="heart_measure">Dia(cmHg)/Sys(cmHg)-Pulse(p/m)</string>
    <string name="add_measure">Add Measure</string>
    <string name="nb_points">Number of points</string>
    <string name="choose_type">Please choose type</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="add_observation">Add observation</string>
    <string name="description">Description</string>
    <string name="database_access_impossible">Database access impossible</string>
    <string name="about">About</string>
    <string name="made_by">Made by Pueblo\nUse of AChartEngine (http://www.achartengine.org/) for charts\nUse of icons from openclipart (https://openclipart.org/)</string>
    <string name="send_email_to_author">Send email to author</string>
</resources>