<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPersonActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:alignmentMode="alignBounds">

        <TextView
            android:text="@string/name"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_add"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:layout_gravity="left"/>

        <TextView
            android:text="@string/birthdate"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/birthdate_add"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="date"
                android:layout_weight="8"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:src="@drawable/calendar_idle"
                android:onClick="pickBirthdate"/>
        </LinearLayout>

        <TextView
            android:text="@string/ssn"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ssn_add"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:layout_weight="1"
            android:layout_gravity="left"/>

        <TextView
            android:text="@string/gender"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gender_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_gravity="left">
            <RadioButton
                android:id="@+id/male_add"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/male"
                android:checked="true"
                android:textColor="@color/regular_text_color"
                android:textStyle="bold"/>
            <RadioButton
                android:id="@+id/female_add"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/female"
                android:textColor="@color/regular_text_color"
                android:textStyle="bold"/>
        </RadioGroup>

        <TextView
            android:text="@string/blood_type"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/btchoice_add"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="left"/>

        <Button
            android:text="@string/add"
            style="@style/TitleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minEms="8"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/plus"
            android:onClick="addPerson"/>

    </LinearLayout>
</ScrollView>