<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alignmentMode="alignBounds">

    <TextView
        android:text="@string/size"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_gravity="left"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/size_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="number"
        android:ems="10"
        android:layout_gravity="left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_size_btn"
            android:text="@string/add"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/cancel_size_btn"
            android:text="@string/cancel"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>