<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTherapistActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:alignmentMode="alignBounds">

        <TextView
            android:text="@string/name"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_update_therapist"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:text="@string/speciality"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/speciality_update"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:capitalize="words"/>

        <TextView
            android:text="@string/phoneNumber"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_number_update"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="phone"
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:text="@string/cell_phone_number"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_update_cellphone"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:text="@string/email_address"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_update_email"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:layout_gravity="fill_horizontal"/>

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleButton"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:ems="8"
            android:drawableRight="@drawable/save"
            android:onClick="updateTherapist"/>

    </LinearLayout>
</ScrollView>