<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTreatmentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:alignmentMode="alignBounds">

        <TextView
            android:text="@string/illness"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/illness_choice"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:capitalize="words"/>

        <TextView
            android:text="@string/prescribedBy"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/therapist_choice"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/drugs"
                android:textColor="@color/regular_text_color"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:textStyle="bold"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:src="@drawable/plus"
                android:onClick="addMedic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/medics_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <TextView
            android:text="@string/duration"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/end_treatment"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number"
                android:minEms="2"
                android:maxEms="2"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:cursorVisible="false"/>

            <TextView
                android:text="@string/number_of_days"
                android:textColor="@color/regular_text_color"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:text="@string/comment"
            android:textColor="@color/regular_text_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_treatment_comment"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:maxLines="5"
            android:layout_gravity="fill_horizontal"
            android:gravity="top|left"/>

        <Button
            android:text="@string/add"
            style="@style/TitleButton"
            android:minEms="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/plus"
            android:onClick="addTreatment"/>

    </LinearLayout>
</ScrollView>